objects/House__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Number__c</fullName>
        <externalId>true</externalId>
        <label>House Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <label>Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>House</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>House Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Houses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>